--- a/src/less/bootstrap-datetimepicker.less
+++ b/src/less/bootstrap-datetimepicker.less
@@ -3,6 +3,27 @@
 //! version : 3.1.3
  * https://github.com/Eonasdan/bootstrap-datetimepicker/
  */
+@bs-datetimepicker-font-size: @font-size-base * 1.5;
+@bs-datetimepicker-timepicker-font-size: 1.2em;
+
+@bs-datetimepicker-bg: @dropdown-bg;
+
+@bs-datetimepicker-active-bg: @btn-primary-bg;
+@bs-datetimepicker-active-color: @btn-primary-color;
+
+@bs-datetimepicker-border-radius: @border-radius-base;
+
+@bs-datetimepicker-btn-hover-bg: @gray-lighter;
+@bs-datetimepicker-btn-disabled-bg: @gray-light;
+@bs-datetimepicker-disabled-color: @gray-light;
+@bs-datetimepicker-alternate-color: @gray-light;
+
+@bs-datetimepicker-secondary-border-color: #ccc;
+@bs-datetimepicker-secondary-border-color-rgba: rgba(0, 0, 0, 0.2);
+@bs-datetimepicker-primary-border-color: white;
+
+@bs-datetimepicker-text-shadow: rgba(0, 0, 0, 0.25);
+
 .bootstrap-datetimepicker-widget {
     top: 0;
     left: 0;
@@ -10,7 +31,7 @@
     padding: 4px;
     margin-top: 1px;
     z-index: 99999 !important;
-    border-radius: @border-radius-base;
+    border-radius: @bs-datetimepicker-border-radius;
 
     &.timepicker-sbs {
         width: 600px;
@@ -22,8 +43,8 @@
             display: inline-block;
             border-left: 7px solid transparent;
             border-right: 7px solid transparent;
-            border-bottom: 7px solid #ccc;
-            border-bottom-color: rgba(0,0,0,.2);
+            border-bottom: 7px solid @bs-datetimepicker-secondary-border-color;
+            border-bottom-color: @bs-datetimepicker-secondary-border-color-rgba;
             position: absolute;
             top: -7px;
             left: 7px;
@@ -34,7 +55,7 @@
             display: inline-block;
             border-left: 6px solid transparent;
             border-right: 6px solid transparent;
-            border-bottom: 6px solid white;
+            border-bottom: 6px solid @bs-datetimepicker-primary-border-color;
             position: absolute;
             top: -6px;
             left: 8px;
@@ -47,8 +68,8 @@
             display: inline-block;
             border-left: 7px solid transparent;
             border-right: 7px solid transparent;
-            border-top: 7px solid #ccc;
-            border-top-color: rgba(0,0,0,.2);
+            border-top: 7px solid @bs-datetimepicker-secondary-border-color;
+            border-top-color: @bs-datetimepicker-secondary-border-color-rgba;
             position: absolute;
             bottom: -7px;
             left: 6px;
@@ -59,7 +80,7 @@
             display: inline-block;
             border-left: 6px solid transparent;
             border-right: 6px solid transparent;
-            border-top: 6px solid white;
+            border-top: 6px solid @bs-datetimepicker-primary-border-color;
             position: absolute;
             bottom: -6px;
             left: 7px;
@@ -98,7 +119,7 @@
     .timepicker-hour, .timepicker-minute, .timepicker-second {
         width: 54px;
         font-weight: bold;
-        font-size: 1.2em;
+        font-size: @bs-datetimepicker-timepicker-font-size;
         margin: 0;
     }
 
@@ -162,7 +183,7 @@
     td,
     th {
         text-align: center;
-        border-radius: @border-radius-base;
+        border-radius: @bs-datetimepicker-border-radius;
     }
 
     td {
@@ -175,7 +196,7 @@
             font-size: 10px;
             height: 20px;
             line-height: 20px;
-            color: @gray-light;
+            color: @bs-datetimepicker-alternate-color;
         }
 
         &.day
@@ -189,13 +210,13 @@
         &.hour:hover,
         &.minute:hover,
         &.second:hover {
-            background: @gray-lighter;
+            background: @bs-datetimepicker-btn-hover-bg;
             cursor: pointer;
         }
 
         &.old,
         &.new {
-            color: @gray-light;
+            color: @bs-datetimepicker-alternate-color;
         }
 
         &.today {
@@ -205,8 +226,8 @@
                 content: '';
                 display: inline-block;
                 border-left: 7px solid transparent;
-                border-bottom: 7px solid @btn-primary-bg;
-                border-top-color: rgba(0, 0, 0, 0.2);
+                border-bottom: 7px solid @bs-datetimepicker-active-bg;
+                border-top-color: @bs-datetimepicker-secondary-border-color-rgba;
                 position: absolute;
                 bottom: 4px;
                 right: 4px;
@@ -215,19 +236,19 @@
 
         &.active,
         &.active:hover {
-            background-color: @btn-primary-bg;
-            color: @btn-primary-color;
-            text-shadow: 0 -1px 0 rgba(0,0,0,.25);
+            background-color: @bs-datetimepicker-active-bg;
+            color: @bs-datetimepicker-active-color;
+            text-shadow: 0 -1px 0 @bs-datetimepicker-text-shadow;
         }
 
             &.active.today:before {
-                border-bottom-color: #fff;
+                border-bottom-color: @bs-datetimepicker-primary-border-color;
             }
 
         &.disabled,
         &.disabled:hover {
             background: none;
-            color: @gray-light;
+            color: @bs-datetimepicker-disabled-color;
             cursor: not-allowed;
         }
 
@@ -238,26 +259,26 @@
             line-height: 54px;
             margin: 2px 1.5px;
             cursor: pointer;
-            border-radius: @border-radius-base;
+            border-radius: @bs-datetimepicker-border-radius;
 
             &:hover {
-                background: @gray-lighter;
+                background: @bs-datetimepicker-btn-hover-bg;
             }
 
             &.active {
-                background-color: @btn-primary-bg;
-                color: @btn-primary-color;
-                text-shadow: 0 -1px 0 rgba(0,0,0,.25);
+                background-color: @bs-datetimepicker-active-bg;
+                color: @bs-datetimepicker-active-color;
+                text-shadow: 0 -1px 0 @bs-datetimepicker-text-shadow;
             }
 
             &.old {
-                color: @gray-light;
+                color: @bs-datetimepicker-alternate-color;
             }
 
             &.disabled,
             &.disabled:hover {
                 background: none;
-                color: @gray-light;
+                color: @bs-datetimepicker-disabled-color;
                 cursor: not-allowed;
             }
         }
@@ -274,7 +295,7 @@
 
         &.next,
         &.prev {
-            font-size: @font-size-base * 1.5;
+            font-size: @bs-datetimepicker-font-size;
         }
 
         &.prev::after {
@@ -289,7 +310,7 @@
         &.disabled,
         &.disabled:hover {
             background: none;
-            color: @gray-light;
+            color: @bs-datetimepicker-disabled-color;
             cursor: not-allowed;
         }
     }
@@ -298,7 +319,7 @@
         cursor: pointer;
 
         &:hover {
-            background: @gray-lighter;
+            background: @bs-datetimepicker-btn-hover-bg;
         }
     }
 }
