--- a/src/sass/_bootstrap-datetimepicker.scss
+++ b/src/sass/_bootstrap-datetimepicker.scss
@@ -328,6 +328,22 @@ $bs-datetimepicker-text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25) !default;
         }
     }
 
+    .datepicker-days.select-week {
+        tr.highlighted td {
+            background-color: @bs-datetimepicker-active-bg;
+            color: @bs-datetimepicker-active-color;
+            text-shadow: @bs-datetimepicker-text-shadow;
+            border-radius: 0;
+
+            &:first-child {
+                border-radius: @bs-datetimepicker-border-radius 0 0 @bs-datetimepicker-border-radius;
+            }
+            &:last-child {
+                border-radius: 0 @bs-datetimepicker-border-radius @bs-datetimepicker-border-radius 0;
+            }
+        }
+    }
+
     &.usetwentyfour {
         td.hour {
             height: 27px;
