--- a/src/less/_bootstrap-datetimepicker.less
+++ b/src/less/_bootstrap-datetimepicker.less
@@ -343,6 +343,10 @@
 	& .datepicker-decades .decade {
         line-height: 1.8em !important;
     }
+
+    & .timepicker-picker tbody {
+        direction: ltr;
+    }
 }
 
 .input-group.date {
