--- a/src/less/_bootstrap-datetimepicker.less
+++ b/src/less/_bootstrap-datetimepicker.less
@@ -1,6 +1,6 @@
 /*!
  * Datetimepicker for Bootstrap 3
- * version : 4.17.45
+ * version : 4.17.47
  * https://github.com/Eonasdan/bootstrap-datetimepicker/
  */
 @bs-datetimepicker-timepicker-font-size: 1.2em;
@@ -201,22 +201,9 @@
             height: 20px;
             line-height: 20px;
             width: 20px;
-            cursor: pointer;
-
-            &:hover {
-                background: @bs-datetimepicker-btn-hover-bg;
-            }
 
             &.picker-switch {
                 width: 145px;
-            }
-
-            &.dow {
-                cursor: auto;
-            }
-
-            &.dow:hover {
-                background: none;
             }
 
             &.disabled,
@@ -234,6 +221,14 @@
             &.next::after {
                 .sr-only();
                 content: "Next Month";
+            }
+        }
+
+        & thead tr:first-child th {
+            cursor: pointer;
+
+            &:hover {
+                background: @bs-datetimepicker-btn-hover-bg;
             }
         }
 
@@ -341,7 +336,7 @@
             line-height: 27px;
         }
     }
-
+	
 	&.wider {
 		width: 21em;
 	}
